syntax = "proto3";
option go_package = ".";

service TradingService{
  rpc OpenPosition(OpenPositionRequest)returns(OpenPositionResponse);
  rpc ClosePosition(ClosePositionRequest)returns(Response);
  rpc GetPositionByID(GetPositionByIDRequest)returns(GetPositionByIDResponse);
  rpc GetUserPositions(GetUserPositionsRequest)returns(GetUserPositionsResponse);
  rpc StopLoss(StopLossRequest)returns(Response);
  rpc TakeProfit(TakeProfitRequest)returns(Response);
}

message OpenPositionRequest{
  string userID = 1;
  string name = 2;
  double amount = 3;
}

message OpenPositionResponse{
  Position position  = 1;
}

message ClosePositionRequest{
  string positionID = 1;
}

message StopLossRequest{
  string positionID = 1;
  double price = 2;
}

message TakeProfitRequest{
  string positionID = 1;
  double price = 2;
}

message GetPositionByIDRequest{
  string positionID = 1;
}

message GetPositionByIDResponse{
  Position position = 1;
}

message GetUserPositionsRequest{
  string userID = 1;
}

message GetUserPositionsResponse{
  repeated Position position = 1;
}

message Response{
}

message Position{
  string id = 1;
  string name = 2;
  double amount = 3;
  optional double stop_loss = 4;
  optional double take_profit = 5;
  optional int64 created = 6;
  optional int64 closed = 7;
}